--- a/main.html
+++ b/main.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Favorite Holiday Destination</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <h1>Switzerland</h1>
+
+    <br>
+
+    <p>
+        Switzerland is a breathtaking holiday destination known for its snow-covered Alps,
+        crystal-clear lakes, charming villages, and world-class scenic train routes. It offers
+        a perfect blend of nature, adventure, food, and culture.
+    </p>
+
+    <h2>Top 5 Attractions</h2>
+    <ol>
+        <li><strong>The Matterhorn</strong> – One of the most iconic mountains in the world.</li>
+        <li><em>Interlaken</em> – Famous for adventure sports and stunning landscapes.</li>
+        <li><strong>Lake Geneva</strong> – A beautiful lake surrounded by mountains and vineyards.</li>
+        <li><em>Jungfraujoch</em> – Known as the “Top of Europe” with amazing snow views.</li>
+        <li><strong>Lucerne</strong> – A historic city with lakes, bridges, and stunning architecture.</li>
+    </ol>
+
+    <h2>Must-Try Foods</h2>
+    <ul>
+        <li><strong>Swiss Fondue</strong> – A classic melted cheese dish.</li>
+        <li><em>Rösti</em> – A crispy potato delicacy.</li>
+        <li><strong>Swiss Chocolate</strong> – Famous worldwide for its rich taste.</li>
+        <li><em>Zürcher Geschnetzeltes</em> – A creamy sliced-meat dish.</li>
+        <li><strong>Bircher Müesli</strong> – A healthy and delicious breakfast creation.</li>
+    </ul>
 
 </body>
 
